// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication flux Should authenticate user with valid credentials 1`] = `
Object {
  "data": Object {
    "userLogin": Object {
      "id": "e0b382ec-e374-45bf-92ea-f231946632f4",
      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImUwYjM4MmVjLWUzNzQtNDViZi05MmVhLWYyMzE5NDY2MzJmNCIsImlhdCI6MTYyMzg4MTcyNSwiZXhwIjoxNjIzOTY4MTI1fQ.H3XIVOdPgylDnT3jbVHU7kAA7pgF7hmu2aFqmbmYutg",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should confirm user account 1`] = `
Object {
  "data": Object {
    "userConfirmAccount": Object {
      "email": "teste@email.com",
      "id": "0ab2f478-370a-4caa-89dd-8c25de9de79f",
      "isVerified": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should generate reset token 1`] = `
Object {
  "data": Object {
    "userForgotPassword": Object {
      "id": "ae151581-f46e-4c4d-b678-8aaaa2e44a8f",
      "passwordResetToken": "6bf0b0e875689bc6125a525729befad93c934a70",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should register user and generate emailConfirmationToken 1`] = `
Object {
  "data": Object {
    "userRegister": Object {
      "email": "kowesor320@vvaa1.com",
      "emailConfirmationToken": "eb9a7b97b3cd4e0187d4108a2de40c58a9d4f6c0",
      "firstName": "mytest",
      "id": "f1cb5f6f-568f-4248-819f-a536fcbd9166",
      "lastName": "lastnametest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should reset user password 1`] = `
Object {
  "data": Object {
    "userResetPassword": Object {
      "email": "teste@email.com",
      "id": "2fa7d69f-8e86-459d-8085-02e6274cbb61",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
